Progreso de blog

--- a/single.html
+++ b/single.html
@@ -4,9 +4,88 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/main-style.css">
+    <link rel="stylesheet" href="assets/css/font/flaticon.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&family=Roboto+Slab:wght@400;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>Page</title>
 </head>
+<header>
+    <section class="header-icons-container">
+        <div class="icons">
+            <a href="" ><span class="flaticon-001-facebook"></span></a>
+            <a href="" ><span class="flaticon-002-twitter"></span></a>
+            <a href="" ><span class="flaticon-011-instagram"></span></a>
+            <a href="" ><span class="flaticon-010-linkedin"></span></a>
+            <a href="" ><span class="flaticon-008-youtube"></span></a>
+        </div>
+    </section>
+    <nav>
+        <section class="nav-logo-container">
+            <a href="#"><img src="assets/img/Logo-negro.png" alt=""></a>
+        </section>
+        <section class="profile-link">
+            <a href="">Sobre mí</a>
+        </section>
+    </nav>
+</header>
+
+
 <body>
-    
+    <main class="">
+        <section class=" grid-container blogpost-img-container">
+            <img src="./assets/img/post-1.png" alt="">
+        </section>
+
+        <section class="blogpost-main-container">
+            <div class="grid-container">
+               <h3>Noticias</h3>
+               <article>
+                 <h2>Título del Blogpost</h2>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure quis inventore necessitatibus accusamus minima. Explicabo veritatis facere qui, nemo alias natus consequatur distinctio fugit quaerat ducimus voluptas assumenda maiores maxime!
+                 Rerum, harum quasi. Dolores suscipit a mollitia ipsam enim cupiditate excepturi impedit. Aliquid incidunt perspiciatis culpa dolores, illum magnam corporis aperiam magni laborum ad hic veniam iusto repellendus animi voluptate!
+                 Praesentium animi eos fuga odio ipsum. Exercitationem consequatur sint obcaecati inventore tempora, non provident similique sunt, excepturi ducimus laborum tenetur! Quo corporis perspiciatis magnam minima quam dolore unde dolor nemo?
+                 Asperiores ratione obcaecati itaque aspernatur dolores quaerat debitis, eveniet nemo accusantium voluptatem soluta! Repellat iure vel, quis corporis eius ut, perspiciatis alias, nisi sed animi modi cupiditate dicta dolores id.
+                 Eius dolore deserunt magnam harum consequatur dicta aliquid esse molestias? Magnam, id. Mollitia fugiat nemo distinctio ad natus nostrum est voluptatibus ex neque dolorum? Vitae dolor ad optio repudiandae quisquam.
+                 <br>
+                 <br>
+                 Tempore asperiores consequatur, dolorum quasi repellendus adipisci sapiente sunt omnis! Tempora fuga et quis odit molestias iste vitae maxime facere. Eum sit doloribus nisi natus, provident rem. Assumenda, quos corrupti?
+                 Praesentium, voluptatum dolore. Adipisci quae non quaerat officiis tempore corporis, minima voluptatum, dicta molestias laboriosam nostrum culpa aperiam quibusdam inventore, quisquam aliquam excepturi ex blanditiis nobis quis nisi aut. Laudantium?
+                 Accusantium amet at quibusdam esse sint sequi nostrum aliquam sunt dolore explicabo.
+                 <br>
+                 <br>
+                 Velit et ab suscipit excepturi ex nulla reiciendis placeat, recusandae labore! Animi possimus dolorem expedita voluptas? Officiis, nam?
+                 Doloremque debitis molestiae minima beatae culpa incidunt error harum suscipit quisquam, reprehenderit laboriosam temporibus numquam quis autem aut fugiat, sit inventore placeat facilis. Pariatur cum autem aut magnam, consequatur voluptatum.
+                 Nam aperiam vitae aut blanditiis voluptate magni cupiditate expedita.
+                 Recusandae, consequuntur tempore nobis quasi nam facilis quisquam quaerat inventore blanditiis eum non sit laudantium quo eaque quae consequatur labore assumenda.
+                </p>
+               </article>
+            </div>
+        </section>
+
+        <section class="contact-main-container">
+            <div>
+                <img src="" alt="">
+                <div class="contact-left">
+                    <a href=""></a>
+                    <p></p>
+                </div>
+            </div>
+
+            <div>
+                <img src="" alt="">
+                <div class="contact-right">
+                    <a href=""></a>
+                    <p></p>
+                </div>
+            </div>
+        </section>
+     
+    </main>
+    <footer>
+        <p>Lorem  voluptatibus atque cum explicabo quod pariatur ipsa eum nemo.</p>
+    </footer>
+
 </body>
 </html>
