--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&family=Roboto+Slab:wght@400;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
-<body>
+<body class="home-body">
     <header>
         <section class="header-icons-container">
             <div class="icons">
